aks/cluster/templates/kafka-drop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafkadrop
  namespace: kafka
  labels:
    app: kafkadrop
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kafkadrop
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kafkadrop
    spec:
      containers:
        - name: kafkadrop
          image: obsidiandynamics/kafdrop:3.27.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: kafkadrop
  namespace: kafka
  labels:
    app: kafkadrop
spec:
  selector:
    app: kafkadrop
  ports:
    - name: http
      port: 9000
      protocol: TCP
      targetPort: 9000
