aks/cluster/templates/keycloak-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - application-gateway
  http:
    - match:
        - uri:
            prefix: "/auth"
      route:
        - destination:
            port:
              number: 80
            host: keycloak-http
