aks/cluster/templates/kiali-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: kiali-ingress
  namespace: istio-system
spec:
  tls:
    - hosts:
        - vtch-aks-demo-monitoring.duckdns.org
      secretName: monitoring-cert
  rules:
    - host: vtch-aks-demo-monitoring.duckdns.org
      http:
        paths:
          - path: /kiali/*
            backend:
              serviceName: kiali
              servicePort: 20001
