aks/cluster/templates/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: kibana-ingress
  namespace: logging
spec:
  tls:
    - hosts:
        - vtch-aks-demo-kibana.duckdns.org
      secretName: kibana-cert
  rules:
    - host: vtch-aks-demo-kibana.duckdns.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: kibana-kibana
              servicePort: 5601
