aks/cluster/templates/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: prometheus-ingress
  namespace: istio-system
spec:
  tls:
    - hosts:
        - vtch-aks-demo-prometheus.duckdns.org
      secretName: prometheus-cert
  rules:
    - host: vtch-aks-demo-prometheus.duckdns.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: prometheus
              servicePort: 9090
