aks/cluster/templates/argocd-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: argocd-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["vtch-aks-demo-argocd.duckdns.org"]
            paths: ["/gradle/cache/*", "/download/*"]
        - operation:
            hosts: ["vtch-aks-demo-argocd.duckdns.org:80"]
            paths: ["/application*", "/cluster*"]
