aks/cluster/templates/gradle-cache-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: gradle-cache-policy
  namespace: istio-system
spec:
  selector:
    matchLabels:
      app: istio-ingressgateway
  action: ALLOW
  rules:
    - to:
        - operation:
            hosts: ["vtch-aks-demo-argocd.duckdns.org"]
            paths: ["/gradle/cache/*"]
